--- a/main.css
+++ b/main.css
@@ -1707,6 +1707,7 @@ textarea.w-input, textarea.w-select {
   margin-right: auto;
   padding: 20px;
   text-decoration: none;
+  transition: all 0.3s ease;
   display: inline-block;
   position: relative;
 }
@@ -1990,9 +1991,86 @@ textarea.w-input, textarea.w-select {
   font-size: 24px;
 }
 
-.nav-link.nav-button-contact:hover {
-  color: #363636;
+.button {
+  --width: 200px;
+  --height: 45px;
+  --tooltip-height: 45px;
+  --tooltip-width: 180px;
+  --gap-between-tooltip-to-button: 18px;
+  --button-color: var(--b);
+  --tooltip-color: var(--site-black);
+  margin-right: 38px;
+  width: var(--width);
+  height: var(--height);
+  background: var(--button-color);
+  position: relative;
+  text-align: center;
+  border-radius: 0.45em;
+  font-size: 23px;
+  transition: background 0.3s;
 }
+
+.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-wrapper,.text,.wm-icon {
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  color: var(--site-black);
+}
+
+.text {
+  top: 0
+}
+
+.text,.wm-icon {
+  transition: top 0.5s;
+}
+
+.wm-icon {
+  color: var(--site-black);
+  top: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wm-icon svg {
+  width: 24px;
+  height: 24px;
+}
+
+.button:hover {
+  background: var(--main);
+}
+
+.button:hover .text {
+  top: -100%;
+}
+
+.button:hover .wm-icon {
+  top: 0;
+}
+
+.button:hover:before,.button:hover:after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.button:hover:after {
+  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) - 20px);
+}
+
+.button:hover:before {
+  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button));
+}
+
 
 .img-div {
   border: 0 solid #000;
@@ -2151,24 +2229,100 @@ textarea.w-input, textarea.w-select {
   display: flex;
 }
 
-.service-button {
-  background-color: var(--b);
+.cssbuttons-io-button {
+  background: var(--b);
   color: var(--site-black);
-  white-space: pre;
-  border-radius: 10px;
-  width: 100%;
+  font-family: inherit;
   margin-top: 12px;
+  padding: 0.35em;
+  padding-left: 1.2em;
   font-size: 15px;
   font-weight: 700;
+  border-radius: 10px;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: inset 0 0 1.6em -0.6em var(--b);
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 2.5em;
+  padding-right: 3.3em;
+  cursor: pointer;
 }
 
-.service-button.show-more {
+.cssbuttons-io-button .icon {
+  background: var(--site-black);
+  margin-left: 1em;
+  position: absolute;
+  display: flex;                                           
+  align-items: center;
+  justify-content: center;
+  height: 2em;
+  width: 2.2em;
+  border-radius: 10px;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #ebcd86;
+  right: 0.3em;
+  transition: all 0.3s ease;
+}
+
+.cssbuttons-io-button:hover .icon {
+  width: calc(100% - 0.6em);
+}
+
+.cssbuttons-io-button .icon svg {
+  width: 1.1em;
+  transition: transform 0.3s;
+  color: var(--b);
+}
+
+.cssbuttons-io-button:hover .icon svg {
+  transform: translateX(0.1em);
+}
+
+.cssbuttons-io-button:active .icon {
+  transform: scale(0.95);
+}
+
+.hero-buttons-container {
+  position: relative;
+  top: 15%;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+.hero-button {
+  width: 100px;
+  text-align: center;
+  padding-top: 15px;
+  font-size: 18px;
+  border-radius: 8px;
+  background-color: var(--b);
+  color: var(--site-black);
+  transition: all 0.3s ease;
+}
+
+.outline-button {
+  background-color: transparent;
+  color: var(--white-site);
+  border: 2px solid var(--white-site);
+}
+
+.show-more {
   display: none;
 }
 
-.service-button:hover {
-  color: #3d3d3d;
-  font-size: 16px;
+.primary-button:hover {
+  background-color: var(--white-site);
+  color: var(--site-black);
+}
+
+.outline-button:hover {
+  border-color: var(--b);
+  color: var(--b);
 }
 
 .service-company-container {
@@ -2225,7 +2379,6 @@ textarea.w-input, textarea.w-select {
   max-width: 921px;
 }
 
-/* Ensure text alignment is correct */
 .page-headers,
 .second-slogen,
 .page-pargraphes {
@@ -2306,6 +2459,7 @@ textarea.w-input, textarea.w-select {
   margin-left: 0;
   margin-right: 0;
   position: relative;
+  overflow: hidden;
 }
 
 .partners-title {
@@ -2406,17 +2560,20 @@ textarea.w-input, textarea.w-select {
 }
 
 .submit-button {
-  background-color: var(--b);
+  background-color: var(--b); /* Orange color from the image */
   color: var(--site-black);
   border-radius: 5px;
   margin-top: 10px;
   font-size: 20px;
   font-weight: 700;
+  transition: all 0.3s ease;
+  border: none;
 }
 
 .submit-button:hover {
-  color: #575757;
-  font-size: 21px;
+  background-color: #b39a65;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .connect-text-grid {
@@ -2609,8 +2766,8 @@ textarea.w-input, textarea.w-select {
 }
 
 .grating-word {
-  color: var(--main);
-  font-size: 50px;
+  color: var(--white-site);
+  font-size: 20px;
   line-height: 50px;
   margin-top: 0px;
 }
@@ -2643,7 +2800,6 @@ textarea.w-input, textarea.w-select {
   align-self: center;
   position: absolute;
   width: 100%;
-  overflow: hidden;
   display: none;
 }
 @keyframes elementor-headline-slide-in {
@@ -2687,7 +2843,7 @@ textarea.w-input, textarea.w-select {
 
 .slogen-container {
   position: relative;
-  top: 20%;
+  top: 24%;
 }
 
 .white-pixel-img {
@@ -2730,6 +2886,13 @@ textarea.w-input, textarea.w-select {
     width: 100px;
   }
 
+  .button {
+    width: 120px;
+    height: 35px;
+    font-size: 18px;
+    border-radius: 7px;
+  }
+
   .service-grid {
     grid-template-columns: 20% 20% 20% 20%;
     height: 500px;
@@ -2750,17 +2913,16 @@ textarea.w-input, textarea.w-select {
     line-height: 30px;
   }
 
-  .service-button {
-    border-radius: 5px;
+  .cssbuttons-io-button {
+    border-radius: 8px;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-size: 13px;
+    font-size: 12px;
   }
 
-  .service-button:hover {
-    font-size: 14px;
+  .cssbuttons-io-button .icon {
+    border-radius: 6px;
   }
-
   .service-company-container {
     border-radius: 20px;
     padding-top: 30px;
@@ -2890,32 +3052,48 @@ textarea.w-input, textarea.w-select {
 
   .grating-word {
     margin-top: 15px;
-    font-size: 40px;
+    font-size: 15px;
+  }
+
+  .hero-buttons-container {
+    top: 10%;
+  }
+  .hero-button {
+    padding: 0px;
+    padding-bottom: 2px;
+    padding-top: 6px;
+    width: 70px;
+    height: 30px;
+    font-size: 13px;
   }
 
   .service-slogen {
-    font-size: 25px;
-    margin-top: 15px;
+    font-size: 20px;
+    margin-top: 0px;
     margin-bottom: 0px;
+    line-height: 15px;
   }
 
   .service-words-container {
     padding-bottom: 25px;
+    margin-top: 0px;
+    line-height: 10px;
   }
 
   .service-words {
     margin: 0px;
-    font-size: 28px;
+    font-size: 25px;
   }
 
   .slogen {
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 20px;
   }
 
   .slogen-container {
-    top: 12%;
+    top: 25%;
   }
-  
+
   .socialmedia-img {
     width: 32px;
     margin-right: 6px;
@@ -3120,6 +3298,18 @@ textarea.w-input, textarea.w-select {
     margin-right: auto;
   }
 
+  .button {
+    --width: 150px;
+    --tooltip-width: 180px;
+    --gap-between-tooltip-to-button: 18px;
+    margin-top: 5px;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 5px;
+  }
   .service-img {
     width: 50px;
     height: 50px;
@@ -3131,6 +3321,59 @@ textarea.w-input, textarea.w-select {
 
   .logo {
     width: 80px;
+  }
+
+  .hero-buttons-container {
+    top: 4%;
+  }
+
+  .hero-button {
+    padding: 5px;
+    padding-top: 7px;
+    width: 50px;
+    font-size: 12px;
+  }
+  .outline-button {
+    padding: 5px;
+  }
+
+  .hero-img {
+    width: 250px;
+  }
+
+  .grating-word {
+    font-size: 12px;
+    line-height: 30px;
+  }
+
+  .service-slogen {
+    padding-top: 10px;
+    margin-top: 0px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .service-words-container {
+    padding-top: 10px;
+    padding-bottom: 25px;
+  }
+  .service-words {
+    margin: 0px;
+    font-size: 22px;
+    line-height: 20px;
+  }
+
+  .slogen {
+    margin-top: 4px;
+    font-size: 15px;
+    line-height: 15px;
+  }
+
+  .slogen-container {
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
   }
 
   .service-grid {
@@ -3152,12 +3395,12 @@ textarea.w-input, textarea.w-select {
 
   .service-grid-card.last-element {
     position: relative;
-    right: -70%; /* Changed from 66% to 33% to center */
+    right: -70%;
   }
 
   .service-grid-card.last-element-right {
     position: relative;
-    left: 80%; /* Changed from 50% to 17% to center */
+    left: 80%;
   }
 
 
@@ -3172,15 +3415,15 @@ textarea.w-input, textarea.w-select {
     line-height: 20px;
   }
 
-  .service-button {
-    border-radius: 5px;
+  .cssbuttons-io-button {
+    border-radius: 6px;
     padding-top: 3px;
     padding-bottom: 3px;
     font-size: 10px;
   }
 
-  .service-button:hover {
-    font-size: 11px;
+  .cssbuttons-io-button .icon {
+    border-radius: 4px;
   }
 
   .service-company-container {
@@ -3333,44 +3576,7 @@ textarea.w-input, textarea.w-select {
     height: 20px;
   }
 
-  .hero-img {
-    width: 250px;
-  }
-
-  .grating-word {
-    font-size: 30px;
-    line-height: 30px;
-  }
-
-  .service-slogen {
-    padding-top: 10px;
-    margin-top: 0px;
-    font-size: 20px;
-    line-height: 20px;
-  }
   
-  .service-words-container {
-    padding-top: 10px;
-    padding-bottom: 25px;
-  }
-  .service-words {
-    margin: 0px;
-    font-size: 22px;
-    line-height: 20px;
-  }
-
-  .slogen {
-    margin-top: 4px;
-    font-size: 15px;
-    line-height: 15px;
-  }
-
-  .slogen-container {
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-  }
 }
 
 #w-node-_07608309-4219-7b2a-e06a-b42e99bf5db5-36933a22 {
@@ -3502,6 +3708,12 @@ textarea.w-input, textarea.w-select {
     align-items: center;
   }
 
+  .button {
+    height: 30px;
+    --tooltip-height: 30px;
+
+  }
+
   .logo {
     width: 60px;
   }
@@ -3555,19 +3767,19 @@ textarea.w-input, textarea.w-select {
     font-size: 14px;
   }
 
-  .service-button {
-    border-radius: 4px;
-    font-size: 11px;
+  .cssbuttons-io-button {
+    border-radius: 5px;
+    font-size: 10px;
   }
 
-  .service-button:hover {
-    font-size: 12px;
+  .cssbuttons-io-button .icon{
+    border-radius: 5px;
   }
-
-  .service-button.show-more {
+  .show-more {
     display: block;
     width: 100px;
     align-self: center;
+    border-radius: 8px;
     background-color: var(--main);
     color: var(--white-site);
   }
@@ -3780,9 +3992,9 @@ textarea.w-input, textarea.w-select {
   }
 
   .grating-word {
-    margin-bottom: 0;
-    font-size: 0;
-    line-height: 0;
+    margin-top: 30px;
+    font-size: 10px;
+    line-height: 10px;
   }
 
   .hero-text-container {
@@ -3816,7 +4028,7 @@ textarea.w-input, textarea.w-select {
   }
 
   .slogen-container {
-    top: 8%;
+    top: 20%;
   }
 
   .white-pixel-img {
@@ -3965,3 +4177,4 @@ textarea.w-input, textarea.w-select {
   font-style: normal;
   font-display: swap;
 }
+
