--- a/main.css
+++ b/main.css
@@ -1460,29 +1460,17 @@ textarea.w-input, textarea.w-select {
 .partners-scroll-wrapper {
   display: flex;
   width: 100%;
+  overflow: hidden;
 }
 
 .images-container {
   display: flex;
-  animation: scroll 20s linear infinite;
-  width: 200%;
+  animation: scroll 30s linear infinite;
+  width: max-content;
 }
 
-.images-container > * {
+.service-company-contairner {
   flex-shrink: 0;
-}
-
-.images-container:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* Clone the content */
-  background: inherit;
-  transform: translateX(100%);
 }
 
 .partners-scroll-container:hover .images-container {
@@ -1490,11 +1478,11 @@ textarea.w-input, textarea.w-select {
 }
 
 @keyframes scroll {
-  from {
-      transform: translateX(-50%); /* Change scroll direction */
+  0% {
+    transform: translateX(0);
   }
-  to {
-      transform: translateX(0); /* Change scroll direction */
+  100% {
+    transform: translateX(calc(-100% / 3));
   }
 }
 
@@ -1506,6 +1494,9 @@ textarea.w-input, textarea.w-select {
   margin-left: 15px;
   margin-right: 15px;
   flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
@@ -2257,7 +2248,7 @@ textarea.w-input, textarea.w-select {
   background: var(--site-black);
   margin-left: 1em;
   position: absolute;
-  display: flex;                                           
+  display: flex;
   align-items: center;
   justify-content: center;
   height: 2em;
@@ -2354,8 +2345,8 @@ textarea.w-input, textarea.w-select {
 }
 
 .srvice-company-image {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
 }
 
 .aboutus-grid {
@@ -3577,7 +3568,7 @@ textarea.w-input, textarea.w-select {
     height: 20px;
   }
 
-  
+
 }
 
 #w-node-_07608309-4219-7b2a-e06a-b42e99bf5db5-36933a22 {
