--- a/main.css
+++ b/main.css
@@ -2750,10 +2750,11 @@ textarea.w-input, textarea.w-select {
 }
 
 .hero-img {
-  width: 420px;
+  width: 115%;
+  max-width: 115%;
   position: absolute;
-  bottom: 0;
-  left: 5%;
+  bottom: -5%;
+  left: -10%;
 }
 
 .grating-word {
@@ -2834,16 +2835,25 @@ textarea.w-input, textarea.w-select {
 
 .slogen-container {
   position: relative;
-  top: 24%;
+  bottom: -25%;
 }
 
 .white-pixel-img {
-  width: 0;
+  display: none;
 }
 
 @media screen and (min-width: 1280px) {
   .section.hero-section, .section.aboutus-section {
     height: 590px;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .hero-img {
+    width: 120%;
+    max-width: 120%;
+    position: absolute;
+    bottom: 8%;
+    left: -13%;
   }
 }
 
@@ -3037,10 +3047,6 @@ textarea.w-input, textarea.w-select {
 
   .second-slogen {
     font-size: 30px;
-  }
-
-  .hero-img {
-    width: 360px;
   }
 
   .grating-word {
@@ -3982,10 +3988,10 @@ textarea.w-input, textarea.w-select {
   }
 
   .hero-img {
-    width: 300px;
-    max-width: 190%;
-    position: static;
-    left: auto;
+    width: 230%;
+    max-width: 230%;
+    left: -31%;
+    bottom: -8%;
   }
 
   .grating-word {
@@ -4043,6 +4049,7 @@ textarea.w-input, textarea.w-select {
   }
 
   .white-pixel-img {
+    display: block;
     width: 100px;
   }
 
